2008-04-07  Alberto Ruiz  <aruiz@gnome.org>

	Merged from trunk:

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc:
	* modules/engines/ms-windows/msw_style.c (draw_box) (draw_arrow)
	(combo_box_draw_arrow) (setup_msw_rc_style): draw box does more intelligent
	separation for the xp theming engine and the classic theme while drawing the
	GtkComboBox button. combobox_draw_arrow is not used	anymore, commented.
	The style has been updated to fix border/thickness glitches in the combobox
	according to the fixes commited	regarding bug	#521442. (bug	#461805)

2008-04-03  Tor Lillqvist  <tml@novell.com>

	Bug 330743 - Up/down spinbuttons won't take zeros and exhibit very
	strange behavior

	* gtk/gtkspinbutton.c (gtk_spin_button_insert_text) [Win32]: Add
	workaround for a specific kind of screwed up locale setting.

2008-04-03  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Add Valencian-Catalan (ca@valencia).

2008-04-02  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gdk/x11/gdkcolor-x11.c: Don't call XFreeColormap on foreign
	colormaps.  Found by Daniel Berrange.

2008-04-02  Federico Mena Quintero  <federico@novell.com>

	Merged from trunk:

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=492134 - The file
	chooser incorrectly substitutes and expands a ~ when you type it
	in the filename entry.

	* gtk/gtkfilesystemunix.c (expand_tilde): Ensure that empty
	basenames result in a slash-terminated pathname.
	gtk_file_system_unix_parse() is correct, but it was splitting
	"/home/username" into path="/home" and file_part="username", which
	is not what the caller wants when the entry has just "~" or
	"~username".

2008-04-02  Tor Lillqvist  <tml@novell.com>

	* gtk/Makefile.am: Don't bother compiling gtksearchenginebeagle.c
	and gtksearchenginetracker.c on Windows.

	* gtk/gtksearchengine.c: Don't define HAVE_BEAGLE and HAVE_TRACKER
	on Windows.

2008-04-01  Richard Hult  <richard@imendio.com>

	Merged from trunk:
